--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
     </style>
 </head>
 <body>
-    <a id="limited-hue" class="link" href="file:///Users/xiwenzhang/Desktop/Work/Yale/Spring%202024/COLOR%20SPACE%20INDEX/color%20space.html">Limited Hue</a>
-    <a id="limited-value" class="link" href="file:///Users/xiwenzhang/Desktop/Work/Yale/Spring%202024/COLOR%20SPACE%20INDEX/index.html">Limited Value</a>
+    <a id="limited-hue" class="link" href="https://xiwenzhn.github.io/hues/">Limited Hue</a>
+    <a id="limited-value" class="link" href="https://xiwenzhn.github.io/colorspace/">Limited Value</a>
     
     <script>
         function generateRandomColor() {
