--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Orange Gradient Generator</title>
     <style>
+        @font-face {
+  font-family: 'NSRLDNA-Regular';
+  src: url('NSRLDNA-Regular.ttf') format('truetype');
+}
         body, html {
             margin: 0;
             padding: 0;
